# rationalbear

./: README.md
ai_assistant/: analytics.py  db.py  main.py  requirements.txt  task_manager.py  tasks.db  timer.py
codewars/rust/pyramid/: Cargo.toml
codewars/rust/validate_pin/: Cargo.toml
container/rust/container/: Cargo.toml  container.json  setlink.sh
container/rust/container/src/: main.rs
database/cte/: fibonacci.sql
design_patterns/behavioral/: chainOfResponsibility.go  observer.go
design_patterns/creational/: factory.go  singleton.go
distributed_computing/: worker.cpp
distributed_cron/scheduler/: Cargo.toml
distributed_cron/scheduler/src/: main.rs
distributed_cron/worker/: Cargo.toml
distributed_cron/worker/src/: main.rs
etl/: README.md  datasource.json  diagram_file_name.puml  etl.go  etl.json
etl/quikflow/: config.go  csv.go  dataSource.go  database.go  dbHander.go  dsn.go  postgres.go  processData.go  query.go  reader.go  writer.go
flutter/ereader/: README.md  pubspec.yaml
flutter/ereader/lib/: main.dart  marquee_text.dart
flutter/meditate/: README.md  fix_icons.sh  flutter_launcher_icons.yaml  pubspec.yaml
go/sample/: sample.go
p4go/: Makefile  README.md  go.mod  p4go.go
p4go/cpp_files/: c_for_go.h  myclient.cc  myclient.h  p4api.cc  p4api.h
proxy/: README.md  main.go  server.json  wormhole.json
proxy/wormhole/: algo.go  backend.go  config.go  wormhole.go
queues/rabbitmq/: publisher_confirms.go
rust/cron-expression/: Cargo.toml
rust/load_balancer/: Cargo.toml
sojourn/: README.md  sojourn.cpp
vim/: .vimrc
(+594 files in other folders)
