[package]
name = "container"
version = "0.1.0"
authors = ["ngavali <ngavali@akamai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unshare = "0.5.1"
nix = "0.17.0"
libc = "0.2.73"
rustc-serialize = "0.3.24"
clap = "2.33.1"
