[package]
name = "container"
version = "0.1.0"
authors = ["ngavali <ngavali@akamai.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unshare = "0.7.0"
nix = "0.25.0"
libc = "0.2.73"
clap = "2.33.1"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
